CGI::Session Change Log
=====================================================================

4.02 - Friday, September 02, 2005
    * FIX: remote_addr() was missing (RT #14414])

4.01 - Thursday, September 01, 2005
    * FIX: Minor POD fix

4.00 - Wednesday, August 31, 2005

    *** NOTE ***
    The 4.0 release represents a major overhaul of the CGI::Session code base.
    Care has been taken to be 100% compatible with applications developed with 3.x.
    However, you are encouraged to run regression tests with your own applications
    before using this in production.

    * NEW: PostgreSQL driver enhanced to work better with binary serializers (Matt LeBlanc)
    * FIX: update to un tainting in default serializer to make "-T" happy (Matt LeBlanc)
    * FIX: CGI::Session (qw/-ip_match/), a 3.x feature, works again (Shawn Sorichetti)
    * INTERNAL: Improved documentation shown during "make", which explains how to run
      database-driven tests. (Mark Stosberg)
    * FIX: to support binary serializers SQLite driver uses MIME::Base64 (Sherzod Ruzmetov)

4.00_09 - Thursday, July 21, 2005

    * CHANGE: Starting with 4.0, it will no longer work to use the syntax of
      CGI::Session::DriverName(). This hasn't been a documented API since CGI::Session 2.94,
      released in August, 2002.
    * FIX: documented etime(), which was present in 3.x (Mark Stosberg)
    * FIX: Added code, test and docs to make $CGI::Session::File::FileName work,
      for 3.x compatibility. (Mark Stosberg)
    * FIX: Providing an expire time like "-10" now works (Mark Stosberg)
    * FIX: Restored close() method, for 3.x compatibility. (Mark Stosberg)
    * FIX: Make ->clear('email') work, for 3.95 compatibility (Mark Stosberg)
    * FIX: Added back is_new() for compatibility with 3.95. (Mark Stosberg)
    * FIX: Support for CGI::Simple is confirmed, resolving RT#6141 (Mark Stosberg)
    * FIX: Add code and tests for $CGI::Session::MySQL::TABLE_NAME, which worked in 3.x (Mark Stosberg)
