@@ -37,9 +37,12 @@ t/api3_incr.t
 t/api3_obj_store.t
 t/api3_obj_store_db_file.t
 t/cgi_simple.t
+t/cgisess.db
+t/cgisess.id
 t/complex_ds.t
 t/driver_dbi.t
 t/expire.t
+t/flush.t
 t/g4.t
 t/g4_dbfile.t
 t/g4_dbfile_freezethaw.t
