@@ -1,12 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         CGI-Session
-version:      4.02
+version:      4.02_01
 version_from: lib/CGI/Session.pm
 installdirs:  site
 requires:
     Data::Dumper:                  
     Digest::MD5:                   
+    Scalar::Util:                  
     Test::More:                    
 
 distribution_type: module
